--- a/source/manifest.json
+++ b/source/manifest.json
@@ -2,7 +2,7 @@
   "name": "Chargin",
   "short_name": "Chargin",
   "description": "Show your device's current battery",
-  "start_url": "./",
+  "start_url": "./?homescreen=1",
   "background_color": "#000000",
   "display": "standalone",
   "theme_color": "#000000",
