--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "main": "source/assets/js/main.js",
-  "dependencies": {},
+  "name": "chargin",
+  "version": "2.0.0",
+  "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
+  "description": "a fun little project to show whether your computer is charging or not 😜",
+  "dependencies": {
+    "next": "^3.2.2",
+    "prop-types": "latest",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "sw-precache-webpack-plugin": "^0.11.4"
+  },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015-native-modules": "^6.9.4",
-    "eslint": "^4.3.0",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.7.0",
-    "webpack": "^3.3.0"
+    "eslint": "latest",
+    "eslint-config-airbnb": "latest",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsx-a11y": "latest",
+    "eslint-plugin-react": "latest",
+    "prettier-eslint": "^8.2.0"
   },
   "scripts": {
-    "build": "webpack --progress --colors --watch"
+    "start": "next start",
+    "build": "next build",
+    "dev": "next"
   },
-  "author": "Logan McAnsh",
-  "license": "",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mcansh/init.git"
-  },
-  "bugs": {
-    "url": "https://github.com/mcansh/init/issues"
-  },
-  "homepage": "https://github.com/mcansh/init#readme"
+  "license": "MIT",
+  "repository": "git@github.com:mcansh/chargin.git"
 }
