--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "chargin",
   "version": "2.0.0",
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
-  "description": "a fun little project to show whether your computer is charging or not 😜",
+  "description":
+    "a fun little project to show whether your computer is charging or not 😜",
   "dependencies": {
     "next": "^3.2.2",
     "prop-types": "latest",
@@ -19,7 +20,7 @@
     "prettier-eslint": "^8.2.0"
   },
   "scripts": {
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "build": "next build",
     "dev": "next"
   },
