--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node server.js",
-    "build": "next build",
+    "build": "next build && next export",
     "dev": "next"
   },
   "license": "MIT",
