--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "description":
     "a fun little project to show whether your computer is charging or not 😜",
   "dependencies": {
-    "next": "^3.2.2",
+    "next": "3.2.2",
     "prop-types": "latest",
     "react": "15.6.1",
     "react-dom": "15.6.1",
-    "sw-precache-webpack-plugin": "^0.11.4"
+    "sw-precache-webpack-plugin": "0.11.4"
   },
   "devDependencies": {
-    "eslint": "latest",
-    "eslint-config-airbnb": "latest",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsx-a11y": "latest",
-    "eslint-plugin-react": "latest",
-    "prettier-eslint": "^8.2.0"
+    "eslint": "4.8.0",
+    "eslint-config-airbnb": "15.1.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
+    "prettier-eslint": "8.2.0"
   },
   "scripts": {
     "start": "NODE_ENV=production node server.js",
