--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "build": "next build && next export",
-    "dev": "next"
+    "dev": "next",
+    "test": "eslint ./"
   },
   "license": "MIT",
   "repository": "git@github.com:mcansh/chargin.git"
