--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "chargin",
   "version": "2.0.0",
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
-  "description": "a fun little project to show whether your computer is charging or not 😜",
+  "description":
+    "a fun little project to show whether your computer is charging or not 😜",
   "dependencies": {
     "next": "3.2.2",
     "prop-types": "latest",
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node server.js",
-    "build": "next build && next export",
+    "build": "next build",
     "dev": "next",
     "test": "eslint ./"
   },
