--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "chargin",
   "version": "2.0.1",
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
-  "description":
-    "a fun little project to show whether your computer is charging or not 😜",
+  "description": "a fun little project to show whether your computer is charging or not 😜",
   "dependencies": {
     "next": "4.1.1",
     "prop-types": "latest",
@@ -12,12 +11,14 @@
     "sw-precache-webpack-plugin": "0.11.4"
   },
   "devDependencies": {
-    "eslint": "4.9.0",
-    "eslint-config-airbnb": "15.1.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-react": "^7.4.0",
     "prettier-eslint": "^8.2.0"
   },
   "scripts": {
