--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "description": "a fun little project to show whether your computer is charging or not 😜",
   "dependencies": {
-    "next": "4.2.3",
-    "prop-types": "latest",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "webpack": "^3.10.0"
+    "next": "6.0.2",
+    "prop-types": "15.6.1",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "sw-precache-webpack-plugin": "0.11.5",
+    "webpack": "4.8.3"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.3",
-    "eslint": "^4.13.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.5.1",
-    "prettier": "^1.9.2",
-    "prettier-eslint": "^8.3.1"
+    "babel-eslint": "8.2.3",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react": "7.8.2",
+    "prettier": "1.12.1",
+    "prettier-eslint": "8.8.1"
   },
   "scripts": {
     "start": "NODE_ENV=production node server.js",
