--- a/package.json
+++ b/package.json
@@ -3,36 +3,36 @@
   "version": "2.0.3",
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "description": "a fun little project to show whether your computer is charging or not 😜",
-  "dependencies": {
-    "next": "6.0.3",
-    "prop-types": "15.6.1",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "sw-precache-webpack-plugin": "0.11.5",
-    "webpack": "4.12.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "8.2.3",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-prettier": "2.6.0",
-    "eslint-plugin-react": "7.9.1",
-    "prettier": "1.13.5",
-    "prettier-eslint": "8.8.1"
-  },
+  "license": "MIT",
+  "repository": "mcansh/chargin",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "build": "next build",
     "dev": "next",
+    "start": "next start",
+    "build": "next build",
+    "export": "next export",
     "test": "eslint ./",
     "deploy": "now && now alias"
   },
-  "license": "MIT",
-  "repository": "git@github.com:mcansh/chargin.git",
-  "now": {
-    "alias": "chargin.loganmcansh.com"
+  "dependencies": {
+    "babel-plugin-styled-components": "1.8.0",
+    "next": "7.0.2",
+    "prop-types": "15.6.2",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
+    "styled-components": "4.0.0",
+    "sw-precache-webpack-plugin": "0.11.5",
+    "webpack": "4.20.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "10.0.1",
+    "eslint": "5.7.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-mcansh": "1.0.7",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-react": "7.11.1",
+    "prettier": "1.14.3"
   }
 }
