--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack": "4.20.2"
   },
   "devDependencies": {
+    "@babel/preset-flow": "7.0.0",
     "babel-eslint": "10.0.1",
     "eslint": "5.7.0",
     "eslint-config-airbnb": "17.1.0",
@@ -33,6 +34,9 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
+    "flow": "0.2.3",
+    "flow-bin": "0.84.0",
+    "flow-typed": "2.5.1",
     "prettier": "1.14.3"
   }
 }
