--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "1.8.0",
+    "intl-relativeformat": "2.1.0",
     "next": "7.0.2",
     "prop-types": "15.6.2",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "styled-components": "4.0.0",
+    "react": "16.7.0-alpha.0",
+    "react-dom": "16.7.0-alpha.0",
+    "styled-components": "4.0.2",
     "sw-precache-webpack-plugin": "0.11.5",
-    "webpack": "4.20.2"
+    "webpack": "4.23.1"
   },
   "devDependencies": {
+    "@babel/preset-flow": "7.0.0",
     "babel-eslint": "10.0.1",
     "eslint": "5.7.0",
     "eslint-config-airbnb": "17.1.0",
@@ -33,6 +35,9 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
+    "flow": "0.2.3",
+    "flow-bin": "0.84.0",
+    "flow-typed": "2.5.1",
     "prettier": "1.14.3"
   }
 }
