update to now 2.0, remove Dockerfile, move around some dependencies
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/now.json
+++ b/now.json
@@ -1,7 +1,13 @@
 {
   "name": "chargin",
   "alias": "chargin.loganmcansh.com",
-  "type": "static",
+  "version": 2,
+  "builds": [
+    {
+      "src": "**",
+      "use": "@now/static"
+    }
+  ],
   "static": {
     "directoryListing": false,
     "headers": [
